#
# $Id: Makefile.am,v 1.1.2.1 2010/12/28 12:55:45 uehira Exp $
#

noinst_PROGRAMS = ch2tky2jgd delta final2tky2jgd map2tky2jgd tky2jgd2ch1 \
			tky2jgd2ch2 tky2jgd2final tky2jgd2map

EXTRA_DIST = tky2jgd.html tky2jgd_final.html tky2jgd_map.html

ch2tky2jgd_SOURCES = ch2tky2jgd.c

delta_SOURCES = delta.c
delta_LDADD = -lm

final2tky2jgd_SOURCES = final2tky2jgd.c

map2tky2jgd_SOURCES = map2tky2jgd.c

tky2jgd2ch1_SOURCES = tky2jgd2ch1.c

tky2jgd2ch2_SOURCES = tky2jgd2ch2.c

tky2jgd2final_SOURCES = tky2jgd2final.c

tky2jgd2map_SOURCES = tky2jgd2map.c
